fix: fix patient, profile, risk tests