@@ -10,6 +10,7 @@ import pl.edu.medicore.application.labresult.Parameter;
 import pl.edu.medicore.application.labresult.LabResultService;
 import pl.edu.medicore.application.patient.Patient;
 import pl.edu.medicore.application.patient.PatientService;
+import pl.edu.medicore.application.patient.PregnancyStatus;
 import pl.edu.medicore.application.person.Gender;
 import pl.edu.medicore.application.risk.Disease;
 import pl.edu.medicore.application.risk.RiskGroup;
@@ -57,48 +58,40 @@ class RiskResultServiceTest {
 
         Patient patient = new Patient();
         patient.setGender(Gender.MALE);
-        patient.setPregnant(false);
-        patient.setWeight(60);
-        patient.setHeight(180);
-        patient.setBirthDate(LocalDate.of(1990, 10, 10));
+        patient.setPregnancyStatus(PregnancyStatus.NOT_APPLICABLE);
+        patient.setWeight(60.0);
+        patient.setHeight(180.0);
+        patient.setBirthDate(LocalDate.now().minusYears(36));
 
         pl.edu.medicore.application.test.Test test = new pl.edu.medicore.application.test.Test();
         test.setPatient(patient);
 
-        LabResult hgbResult = new LabResult();
-        hgbResult.setTest(test);
-        hgbResult.setParameter(Parameter.HGB);
-        hgbResult.setValue(20.6);
-
-        LabResult hctResult = new LabResult();
-        hctResult.setTest(test);
-        hctResult.setParameter(Parameter.HCT);
-        hctResult.setValue(30.6);
-
-        LabResult rbcResult = new LabResult();
-        rbcResult.setTest(test);
-        rbcResult.setParameter(Parameter.RBC);
-        rbcResult.setValue(10.6);
-
-
-        List<LabResult> labResults = List.of(hgbResult, hctResult, rbcResult);
+        List<LabResult> labResults = constructLabResults(test);
 
         when(labResultService.getLabResultsByTestId(hashId)).thenReturn(labResults);
+
         when(riskCalculatorService
-                .calculateAnemiaRiskPercentage(20.6, 30.6, 10.6, Gender.MALE, false))
+                .calculateAnemiaRiskPercentage(20.6, 30.6, 10.6, Gender.MALE, PregnancyStatus.NOT_APPLICABLE))
                 .thenReturn(20.5);
 
         when(riskCalculatorService
-                .calculateDiabetesRisk(any(), any(), any(), any(), any()))
-                .thenReturn(null);
+                .calculateDiabetesRisk(60.0, 180.0, 110.0, Gender.MALE, 36))
+                .thenReturn(15.0);
 
         when(riskCalculatorService
-                .calculateCKDRisk(any(), any(), any(), any(), any()))
-                .thenReturn(null);
+                .calculateCKDRisk(0.9, 60.0, 180.0, Gender.MALE, 36))
+                .thenReturn(8.0);
+
         riskService.calculateRiskForTest(hashId);
 
+        verify(testService).checkExistsById(hashId);
         verify(labResultService).getLabResultsByTestId(hashId);
-        verify(riskResultRepository, times(3)).save(any());
+
+        verify(riskCalculatorService).calculateAnemiaRiskPercentage(20.6, 30.6, 10.6, Gender.MALE, PregnancyStatus.NOT_APPLICABLE);
+        verify(riskCalculatorService).calculateDiabetesRisk(60.0, 180.0, 110.0, Gender.MALE, 36);
+        verify(riskCalculatorService).calculateCKDRisk(0.9, 60.0, 180.0, Gender.MALE, 36);
+
+        verify(riskResultRepository, times(3)).save(any(RiskResult.class));
     }
 
     @Test
@@ -112,6 +105,7 @@ class RiskResultServiceTest {
                 () -> riskService.calculateRiskForTest(hashId));
         assertEquals("No lab results found for test", ex.getMessage());
 
+        verify(testService).checkExistsById(hashId);
         verify(riskResultRepository, never()).save(any());
     }
 
@@ -125,13 +119,12 @@ class RiskResultServiceTest {
 
         RiskResultResponseDto dto1 = new RiskResultResponseDto(HashId.of(1L), Disease.ANEMIA, RiskGroup.LOW,
                 20.5, LocalDate.of(2025, 1, 1),
-                LocalDate.of(2025, 1, 1));
+                LocalDate.of(2025, 1, 1), "");
         RiskResultResponseDto dto2 = new RiskResultResponseDto(HashId.of(1L), Disease.DIABETES, RiskGroup.LOW,
                 20.5, LocalDate.of(2023, 1, 1),
-                LocalDate.of(2025, 1, 1));
+                LocalDate.of(2025, 1, 1), "");
 
         when(riskResultRepository.getLatestByPatientPublicId(patientId)).thenReturn(List.of(entity1, entity2));
-
         when(riskResultMapper.toDto(entity1)).thenReturn(dto1);
         when(riskResultMapper.toDto(entity2)).thenReturn(dto2);
 
@@ -141,6 +134,7 @@ class RiskResultServiceTest {
         assertEquals(dto1, result.get(0));
         assertEquals(dto2, result.get(1));
 
+        verify(patientService).checkExistsById(patientHash);
         verify(riskResultRepository).getLatestByPatientPublicId(patientId);
         verify(riskResultMapper).toDto(entity1);
         verify(riskResultMapper).toDto(entity2);
@@ -156,6 +150,7 @@ class RiskResultServiceTest {
         List<RiskResultResponseDto> result = riskService.getLatestByPatientId(patientHash);
 
         assertTrue(result.isEmpty());
+        verify(patientService).checkExistsById(patientHash);
         verify(riskResultMapper, never()).toDto(any());
     }
 
@@ -166,14 +161,42 @@ class RiskResultServiceTest {
 
         Patient patient = new Patient();
         patient.setGender(Gender.MALE);
-        patient.setPregnant(false);
-        patient.setWeight(60);
-        patient.setHeight(180);
+        patient.setPregnancyStatus(PregnancyStatus.NOT_APPLICABLE);
+        patient.setWeight(60.0);
+        patient.setHeight(180.0);
         patient.setBirthDate(LocalDate.of(1990, 10, 10));
 
         pl.edu.medicore.application.test.Test test = new pl.edu.medicore.application.test.Test();
         test.setPatient(patient);
 
+        List<LabResult> labResults = constructLabResults(test);
+
+        when(labResultService.getLabResultsByPatientId(patientHash)).thenReturn(labResults);
+        when(riskCalculatorService
+                .calculateAnemiaRiskPercentage(20.6, 30.6, 10.6, Gender.MALE, PregnancyStatus.NOT_APPLICABLE))
+                .thenReturn(20.5);
+
+        riskService.calculateRiskForPatient(patientHash);
+
+        verify(patientService).checkExistsById(patientHash);
+        verify(labResultService).getLabResultsByPatientId(patientHash);
+        verify(riskResultRepository, times(3)).save(any(RiskResult.class));
+    }
+
+    @Test
+    void shouldNotSaveRiskResults_whenLabResultsNotFoundForPatient() {
+        long patientId = 1L;
+        HashId patientHash = new HashId(patientId);
+
+        when(labResultService.getLabResultsByPatientId(patientHash)).thenReturn(Collections.emptyList());
+
+        riskService.calculateRiskForPatient(patientHash);
+
+        verify(patientService).checkExistsById(patientHash);
+        verifyNoInteractions(riskResultRepository, riskCalculatorService);
+    }
+
+    private List<LabResult> constructLabResults(pl.edu.medicore.application.test.Test test) {
         LabResult hgbResult = new LabResult();
         hgbResult.setTest(test);
         hgbResult.setParameter(Parameter.HGB);
@@ -189,35 +212,16 @@ class RiskResultServiceTest {
         rbcResult.setParameter(Parameter.RBC);
         rbcResult.setValue(10.6);
 
+        LabResult glucoseResult = new LabResult();
+        glucoseResult.setTest(test);
+        glucoseResult.setParameter(Parameter.GLUCOSE);
+        glucoseResult.setValue(110.0);
 
-        List<LabResult> labResults = List.of(hgbResult, hctResult, rbcResult);
+        LabResult creatinineResult = new LabResult();
+        creatinineResult.setTest(test);
+        creatinineResult.setParameter(Parameter.CREATININE);
+        creatinineResult.setValue(0.9);
 
-        when(labResultService.getLabResultsByPatientId(patientHash)).thenReturn(labResults);
-        when(riskCalculatorService
-                .calculateAnemiaRiskPercentage(20.6, 30.6, 10.6, Gender.MALE, false))
-                .thenReturn(20.5);
-
-        when(riskCalculatorService
-                .calculateDiabetesRisk(any(), any(), any(), any(), any()))
-                .thenReturn(null);
-
-        when(riskCalculatorService
-                .calculateCKDRisk(any(), any(), any(), any(), any()))
-                .thenReturn(null);
-        riskService.calculateRiskForPatient(patientHash);
-
-        verify(labResultService).getLabResultsByPatientId(patientHash);
-        verify(riskResultRepository, times(3)).save(any());
-    }
-
-    @Test
-    void shouldNotSaveRiskResults_whenLabResultsNotFoundForPatient() {
-        long patientId = 1L;
-        HashId patientHash = new HashId(patientId);
-
-        when(labResultService.getLabResultsByPatientId(patientHash)).thenReturn(Collections.emptyList());
-        riskService.calculateRiskForPatient(patientHash);
-
-        verifyNoInteractions(riskResultRepository, riskCalculatorService);
+        return List.of(hgbResult, hctResult, rbcResult, glucoseResult, creatinineResult);
     }
 }
